--- a/README
+++ b/README
@@ -6,28 +6,27 @@ search, convert, analyze, or store data from molecular modeling,
 chemistry, solid-state materials, biochemistry, or related areas.
 
 Runtime requirements:
-  cygwin-1.7.1-1
+  cygwin-1.7.5-1
   libgcc1-4.3.4-3
   libstdc++6-4.3.4-3
   zlib0-1.2.3-10
 (bindings)
   mono-2.4.3.1-1
-  perl-5.10.1-2
-  python-2.5.4-10
+  perl-5.10.1-3
+  python-2.6.5-1
   ruby-1.8.7_p72-10
 
 Build requirements:
 (besides corresponding -devel packages)
   autoconf2.5-2.65-1
   automake1.11-1.11.1-1
-  binutils-2.19.51-1
-  cygport-0.9.80-1
+  binutils-2.20.51-2
+  cygport-0.9.84-1
   gawk-3.1.7-1
   gcc4-core-4.3.4-3
   gcc4-g++-4.3.4-3
   libtool-2.2.7a-15
   make-3.81-2
-  sed-4.1.5-2
 
 Canonical website:
   http://openbabel.sourceforge.net/
@@ -57,6 +56,9 @@ This will create:
 -------------------------------------------
 
 Port Notes:
+
+----- version 2.2.3-2 -----
+Rebuilt bindings for Python 2.6.
 
 ----- version 2.2.3-1 -----
 Version bump.  Added Mono bindings.
